tests/snapshots/command__before_long_help.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_49562373'
Some verbose and long info I'd like to appear before the help info


[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')
EOF_49562373
exit 0
