tests/snapshots/command__diable_version_flag-2.snap
---
source: tests/command.rs
expression: output2
---
command cat <<'EOF_29239711'
myprog 1.0.0
EOF_29239711
exit 0
