tests/snapshots/command__disable_colored_help.snap
---
source: tests/command.rs
assertion_line: 338
expression: output
---
command cat <<'EOF'
Usage: myprog [OPTIONS]

Options:
      --config <cfg>  
  -h, --help          Print help
EOF
exit 0
