tests/snapshots/command__disable_help_flag-2.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_8a3a8edf'
[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
      [1m--help[0m  Print version
EOF_8a3a8edf
exit 0
